--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+    margin: 30px;
   }
   
   ol, ul {
@@ -18,7 +18,7 @@ body {
   }
   
   .square {
-    background: #fff;
+    background: rgb(195, 178, 178);
     border: 1px solid #999;
     float: left;
     font-size: 24px;
